feat: Use JDK 21 version🫸🌀✏️📗🐧🐳⬆